@@ -80,12 +80,15 @@ public class Log4j2Watcher extends LogWatcher<LogEvent> {
 
   @SuppressForbidden(reason = "class is specific to log4j2")
   protected static class Log4j2Info extends LoggerInfo {
-    Log4j2Info(String name, Level level) {
+    public Log4j2Info(String name, Level level, boolean isSet) {
       super(name);
       if (level != null) {
         this.level = level.toString();
       }
+      this.isSet = isSet;
     }
+
+    private final boolean isSet;
 
     @Override
     public String getLevel() {
@@ -99,7 +102,7 @@ public class Log4j2Watcher extends LogWatcher<LogEvent> {
 
     @Override
     public boolean isSet() {
-      return level != null;
+      return isSet;
     }
   }
 
@@ -134,22 +137,21 @@ public class Log4j2Watcher extends LogWatcher<LogEvent> {
     LoggerConfig loggerConfig = getLoggerConfig(ctx, loggerName);
     assert loggerConfig != null;
     boolean madeChanges = false;
-    if (loggerName.equals(loggerConfig.getName()) || isRootLogger(loggerName)) {
-      if (level == null || "unset".equals(level) || "null".equals(level)) {
-        level = Level.OFF.toString();
-        loggerConfig.setLevel(Level.OFF);
-        madeChanges = true;
-      } else {
-        try {
-          loggerConfig.setLevel(Level.valueOf(level));
-          madeChanges = true;
-        } catch (IllegalArgumentException iae) {
-          log.error("{} is not a valid log level! Valid values are: {}", level, getAllLevels());
-        }
+
+    Level _level = null;
+    if (!(level == null || "unset".equals(level) || "null".equals(level))) {
+      try {
+        _level = Level.valueOf(level);
+      } catch (IllegalArgumentException iae) {
+        log.error("{} is not a valid log level! Valid values are: {}", level, getAllLevels());
       }
+    }
+    if (loggerName.equals(loggerConfig.getName()) || isRootLogger(loggerName)) {
+      loggerConfig.setLevel(_level);
+      madeChanges = true;
     } else {
-      // It doesn't have its own logger yet so let's create one
-      LoggerConfig explicitConfig = new LoggerConfig(loggerName, Level.valueOf(level), true);
+      // It doesn't have its own logger config yet so let's create one
+      LoggerConfig explicitConfig = new LoggerConfig(loggerName, _level, true);
       explicitConfig.setParent(loggerConfig);
       config.addLogger(loggerName, explicitConfig);
       madeChanges = true;
@@ -158,7 +160,7 @@ public class Log4j2Watcher extends LogWatcher<LogEvent> {
     if (madeChanges) {
       ctx.updateLoggers();
       if (log.isInfoEnabled()) {
-        log.info("Setting log level to '{}' for logger: {}", level, loggerName);
+        log.info("Setting log level to '{}' for logger: {}", _level, loggerName);
       }
     }
   }
@@ -178,36 +180,53 @@ public class Log4j2Watcher extends LogWatcher<LogEvent> {
   public Collection<LoggerInfo> getAllLoggers() {
     Logger root = LogManager.getRootLogger();
     LoggerContext ctx = (LoggerContext) LogManager.getContext(false);
+    LoggerConfig rootConfig = ctx.getConfiguration().getRootLogger();
     Map<String, LoggerInfo> map = new HashMap<>(ctx.getLoggers().size());
 
-    // First let's get the explicitly configured loggers
-    Map<String, LoggerConfig> loggers = ctx.getConfiguration().getLoggers();
-    for (Map.Entry<String, LoggerConfig> logger : loggers.entrySet()) {
-      String name = logger.getKey();
+    // First add the ROOT loger with the ROOT level
+    map.put(
+        LoggerInfo.ROOT_NAME,
+        new Log4j2Info(
+            LoggerInfo.ROOT_NAME, root.getLevel(), null != rootConfig.getExplicitLevel()));
 
-      if (logger == root
-          || root.equals(logger)
-          || isRootLogger(name)
-          || (name != null && name.isEmpty())) {
+    // Next get the explicitly configured loggers
+    Map<String, LoggerConfig> configs = ctx.getConfiguration().getLoggers();
+    for (Map.Entry<String, LoggerConfig> config : configs.entrySet()) {
+      final String name = config.getKey();
+      final Logger logger = ctx.getLogger(name);
+
+      if (logger == root || root.equals(logger) || isRootLogger(name) || "".equals(name)) {
         continue;
       }
-      map.put(name, new Log4j2Info(name, logger.getValue().getLevel()));
+
+      // NOTE: just because we have an explicit configuration, doesn't mean we have an explitly set
+      // level
+      // (Configuration might be for some other property, and level is still inherited)
+      map.putIfAbsent(
+          name,
+          new Log4j2Info(name, logger.getLevel(), null != config.getValue().getExplicitLevel()));
     }
 
-    for (org.apache.logging.log4j.core.Logger logger : ctx.getLoggers()) {
+    // Now add any "in use" loggers (that aren't already explicitly configured) and their parents
+    for (Logger logger : ctx.getLoggers()) {
       String name = logger.getName();
-      if (logger == root || root.equals(logger) || isRootLogger(name)) continue;
 
-      map.put(name, new Log4j2Info(name, logger.getLevel()));
+      if (logger == root || root.equals(logger) || isRootLogger(name) || "".equals(name)) {
+        continue;
+      }
+
+      // If we didn't already see a LoggerConfig for these loggers, then their level is
+      // not (explicitly) set
+      map.putIfAbsent(name, new Log4j2Info(name, logger.getLevel(), false));
       while (true) {
         int dot = name.lastIndexOf('.');
         if (dot < 0) break;
 
         name = name.substring(0, dot);
-        if (!map.containsKey(name)) map.put(name, new Log4j2Info(name, null));
+        map.putIfAbsent(name, new Log4j2Info(name, logger.getLevel(), false));
       }
     }
-    map.put(LoggerInfo.ROOT_NAME, new Log4j2Info(LoggerInfo.ROOT_NAME, root.getLevel()));
+
     return map.values();
   }
 
